--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Astro Motion by TemplateMo</title>
+    <title>Rent a car</title>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/slick.css" type="text/css" /> 
@@ -19,7 +19,7 @@ https://templatemo.com/tm-560-astro-motion
 </head>
 <body>
     <video autoplay muted loop id="bg-video">
-        <source src="video/gfp-astro-timelapse.mp4" type="video/mp4">
+        <source src="video/burnout.mp4" type="video/mp4">
     </video>
     <div class="page-container">
       <div class="container-fluid">
@@ -27,7 +27,7 @@ https://templatemo.com/tm-560-astro-motion
           <div class="col-xs-12">
             <div class="cd-slider-nav">
               <nav class="navbar navbar-expand-lg" id="tm-nav">
-                <a class="navbar-brand" href="#">Astro Motion</a>
+                <a style="color: black" class="navbar-brand" href="#">Rent a car</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-supported-content" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -38,7 +38,7 @@ https://templatemo.com/tm-560-astro-motion
                         <div class="circle"></div>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#0" data-no="2">Gallery</a>
+                        <a class="nav-link" href="#0" data-no="2">Cars</a>
                         <div class="circle"></div>
                       </li>
                       <li class="nav-item">
@@ -62,17 +62,18 @@ https://templatemo.com/tm-560-astro-motion
             <div class="page-width-1 page-left">
               <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container">
                 <div class="intro-left tm-bg-dark">
-                  <h2 class="mb-4">Welcome to Astro Motion</h2>
+                  <h2 class="mb-4">Welcome to Rent a car</h2>
                   <p class="mb-4">
-                    This HTML template has a motion video background loop which is provided by <a rel="sponsored" href="https://getfreepictures.com" target="_blank">Get Free Pictures</a>. This is
-                    one-page responsive layout for your websites. Feel
-                  free to use this for a commercial purpose. </p>
-                  <p class="mb-0">
-                  You are not permitted to redistribute this template on your Free CSS collection websites. Please <a rel="nofollow" href="https://templatemo.com/contact" target="_blank">contact us</a> for more information. </p>
-                </div>
+                     Welcome to our exclusive collection of high-end cars! Are you ready to experience the thrill of driving some of the world's most luxurious and powerful vehicles? From sleek sports cars to spacious SUVs, we have the perfect car to make your dream drive a reality.
+                     Each car is equipped with the latest technology, premium features, and hand-crafted interiors to ensure an unforgettable driving experience. Whether you're cruising down the coast, heading to a special event, or just want to treat yourself to a once-in-a-lifetime experience, our high-end cars are sure to turn heads and make a lasting impression.
+
+                    So why wait? Treat yourself to the ride of a lifetime and rent one
+                  </p>
+                 </div>
                 <div class="intro-right">
-                  <img src="img/home-img-1.jpg" alt="Image" class="img-fluid intro-img-1">
-                  <img src="img/home-img-2.jpg" alt="Image" class="img-fluid intro-img-2">
+                  <img src="img/maybach.jpeg" alt="Image" class="img-fluid intro-img-1">
+                  <img src="img/tesla_x.jpeg" alt="Image" class="img-fluid intro-img-2">
+                  <img style="width: 275px; height: 183px; margin-top: 10px" src="img/range_sport.jpeg" alt="Image" class="img-fluid intro-img-3">
                 </div>
                 <div class="circle intro-circle-1"></div>
                 <div class="circle intro-circle-2"></div>
@@ -81,7 +82,7 @@ https://templatemo.com/tm-560-astro-motion
               </div>
               <div class="text-center">
                 <a href="#0" data-page-no="2" class="btn btn-primary tm-intro-btn tm-page-link">
-                  View Gallery
+                  View Cars
                 </a>
               </div>            
             </div>            
@@ -93,7 +94,52 @@ https://templatemo.com/tm-560-astro-motion
               <div class="circle intro-circle-2"></div>
               <div class="mx-auto tm-border-top gallery-slider">
                 <figure class="effect-julia item">
-                    <img src="img/gallery-img-01.jpg" alt="Image">
+                    <img style="width: 800px; height: 200px" src="img/brabus_wagon.jpeg" alt="Image">
+                    <figcaption>
+                        <div>
+                            <p>Brabus G wagon</p>
+                        </div>
+                        <a href="#">View more</a>
+                    </figcaption>
+                </figure>
+                <figure class="effect-julia item">
+                    <img style="width: 800px; height: 200px" src="img/challenger.jpeg" alt="Image">
+                    <figcaption>
+                        <div>
+                            <p>Dodge Challenger</p>
+                        </div>
+                        <a href="#">View more</a>
+                    </figcaption>
+                </figure>
+                <figure class="effect-julia item">
+                    <img style="width: 800px; height: 200px" src="img/gls600.jpeg" alt="Image">
+                    <figcaption>
+                        <div>
+                            <p>Mercedes GLS 600</p>
+                        </div>
+                        <a href="#">View more</a>
+                    </figcaption>
+                </figure>
+                <figure class="effect-julia item">
+                    <img style="width: 800px; height: 200px" src="img/srt.jpeg" alt="Image">
+                    <figcaption>
+                        <div>
+                            <p>Subaru STI WRX</p>
+                        </div>
+                        <a href="#">View more</a>
+                    </figcaption>
+                </figure>
+                <figure class="effect-julia item">
+                    <img style="width: 800px; height: 200px" src="img/z4.jpeg" alt="Image">
+                    <figcaption>
+                        <div>
+                            <p>BMW Z4</p>
+                        </div>
+                        <a href="#">View more</a>
+                    </figcaption>
+                </figure>
+                <figure class="effect-julia item">
+                    <img style="width: 800px; height: 200px" src="img/gallery-img-06.jpg" alt="Image">
                     <figcaption>
                         <div>
                             <p>Julia dances in the deep dark</p>
@@ -102,7 +148,7 @@ https://templatemo.com/tm-560-astro-motion
                     </figcaption>
                 </figure>
                 <figure class="effect-julia item">
-                    <img src="img/gallery-img-02.jpg" alt="Image">
+                    <img style="width: 800px; height: 200px" src="img/amg-gt.jpeg" alt="Image">
                     <figcaption>
                         <div>
                             <p>Julia dances in the deep dark</p>
@@ -111,7 +157,7 @@ https://templatemo.com/tm-560-astro-motion
                     </figcaption>
                 </figure>
                 <figure class="effect-julia item">
-                    <img src="img/gallery-img-03.jpg" alt="Image">
+                    <img style="width: 800px; height: 200px" src="img/gallery-img-08.jpg" alt="Image">
                     <figcaption>
                         <div>
                             <p>Julia dances in the deep dark</p>
@@ -120,52 +166,7 @@ https://templatemo.com/tm-560-astro-motion
                     </figcaption>
                 </figure>
                 <figure class="effect-julia item">
-                    <img src="img/gallery-img-04.jpg" alt="Image">
-                    <figcaption>
-                        <div>
-                            <p>Julia dances in the deep dark</p>
-                        </div>
-                        <a href="#">View more</a>
-                    </figcaption>
-                </figure>
-                <figure class="effect-julia item">
-                    <img src="img/gallery-img-05.jpg" alt="Image">
-                    <figcaption>
-                        <div>
-                            <p>Julia dances in the deep dark</p>
-                        </div>
-                        <a href="#">View more</a>
-                    </figcaption>
-                </figure>
-                <figure class="effect-julia item">
-                    <img src="img/gallery-img-06.jpg" alt="Image">
-                    <figcaption>
-                        <div>
-                            <p>Julia dances in the deep dark</p>
-                        </div>
-                        <a href="#">View more</a>
-                    </figcaption>
-                </figure>
-                <figure class="effect-julia item">
-                    <img src="img/gallery-img-07.jpg" alt="Image">
-                    <figcaption>
-                        <div>
-                            <p>Julia dances in the deep dark</p>
-                        </div>
-                        <a href="#">View more</a>
-                    </figcaption>
-                </figure>
-                <figure class="effect-julia item">
-                    <img src="img/gallery-img-08.jpg" alt="Image">
-                    <figcaption>
-                        <div>
-                            <p>Julia dances in the deep dark</p>
-                        </div>
-                        <a href="#">View more</a>
-                    </figcaption>
-                </figure>
-                <figure class="effect-julia item">
-                    <img src="img/gallery-img-09.jpg" alt="Image">
+                    <img style="width: 800px; height: 200px" src="img/gallery-img-09.jpg" alt="Image">
                     <figcaption>
                         <div>
                             <p>Julia dances in the deep dark</p>
@@ -248,10 +249,10 @@ https://templatemo.com/tm-560-astro-motion
     <div class="container-fluid">
       <footer class="row mx-auto tm-footer">
         <div class="col-md-6 px-0">
-          Copyright 2021 Astro Motion Company Limited. All rights reserved.
+          Pick yourself up a car today and enjoy the thrill.
         </div>
         <div class="col-md-6 px-0 tm-footer-right">
-          Designed by <a rel="sponsored" href="https://templatemo.com" target="_blank" class="tm-link-white">TemplateMo</a>
+          Be the envy of everyone at affordable prices
         </div>
       </footer>
     </div>
